#Copyright (c) Microsoft. All rights reserved.
#Licensed under the MIT license. See LICENSE file in the project root for full license information.

#this is CMakeLists for micromock unittests folder, it is empty
cmake_minimum_required(VERSION 2.8.11)

add_subdirectory(umockcall_unittests)
add_subdirectory(umock_c_unittests)
add_subdirectory(umocktypes_charptr_unittests)
add_subdirectory(umocktypes_unittests)